AUTOMAKE_OPTIONS = no-dist
noinst_LIBRARIES = libhavokcore.a
libhavokcore_a_SOURCES  = main.c signals.c login-sm.c output.c mysql_database.c
libhavokcore_a_SOURCES += command_parser.c core_commands.c ansi_output.c 
libhavokcore_a_SOURCES += char_data.c object_data.c keywords.c weather.c 
libhavokcore_a_SOURCES += room_data.c mobile_data.c special_funcs.c 
libhavokcore_a_SOURCES += mysql_upgrade.c dice.c db_api.c protobuf_api.c

include Makefile.local
