AUTOMAKE_OPTIONS = no-dist
noinst_LIBRARIES = libhavokthread.a
libhavokthread_a_SOURCES  = master.c connections.c input.c login.c dns.c 
libhavokthread_a_SOURCES += logging.c editor.c playing.c mysql_handler.c 
libhavokthread_a_SOURCES += thread_api.c smtp.c protobuf.c webservice.c

include Makefile.local
